<resources>
    <string name="app_name">jikimi</string>

    <!-- bottomSheet -->
    <string name="distance_tv">몇m</string>
    <string name="shelter_tv">야외/실내대피장소</string>
    <string name="shelter_name_tv">대피 시설명</string>
    <string name="shelter_address_tv">대피 시설명 주소</string>
    <string name="shelter_people_tv">학교운동장</string>
    <string name="shelter_classification_tv">수용인원: 30명</string>
    <string name="shelter_phone_tv">02-0000-0000</string>

    <!-- evacuate_fragment -->
    <string name="search_et">대피소,임시주거시설 검색</string>

    <!-- like_dialog -->
    <string name="dialog_like_delete">좋아요를 삭제하시겠습니까?</string>
    <string name="dialog_cancel">취소</string>
    <string name="dialog_delete">삭제</string>

    <!--community_fragment-->
    <string name="community_main_tv">커뮤니티</string>
    <string name="community_nickname_tv">닉네임닉네임</string>
    <string name="community_disaster_tv">재난 안내문자</string>
    <string name="community_date_content_tv">날짜~~~</string>
    <string name="community_message_content_tv">내용~~~</string>
    <string name="community_chip_all">전체</string>
    <string name="community_chip_emergency">긴급</string>
    <string name="community_chip_info">정보</string>
    <string name="community_chip_communication">소통</string>
    <string name="community_chip_report">제보</string>
    <string name="community_empty">게시물이 없습니다</string>

    <!--detail_fragment-->
    <string name="detail_main_tv">재난상식</string>
    <string name="no_results_tv">검색 결과가 없습니다</string>

    <!--menu-->
    <string name="menu_disaster">대피</string>
    <string name="menu_disaster_tip">대처방법</string>
    <string name="menu_disaster_talk">재난토크</string>

    <!--create_post_fragment-->
    <string name="create_post_title_tv">게시물 작성</string>
    <string name="create_post_content_et">내용을 입력하세요...</string>
    <string name="create_post_image_count_tv">사진 추가</string>
    <string name="create_post_btn">게시하기</string>

    <!--detail_fragment-->
    <string name="detail_category_tv">소통</string>
    <string name="detail_nickname_tv">닉네임</string>
    <string name="detail_time_stamp_tv">1시간 전</string>
    <string name="detail_post_content_tv">게시물 내용</string>
    <string name="detail_comments_label_tv">댓글</string>
    <string name="detail_empty_comment_tv">댓글이 없습니다</string>
    <string name="detail_reply_tv">답글 작성 중</string>
    <string name="detail_comment_et">댓글을 입력하세요...</string>


    <!--disaster_fragment-->
    <string name="disaster_commonsense">재난상식</string>
    <string name="disaster_search_et">AI에게 대처방법 물어보기.(예.지진,아파트 화재..)</string>
    <string name="disaster_ai_icon">✨</string>
    <string name="disaster_ai_tv">AI 추천</string>
    <string name="disaster_title_tv">오늘의 재난 대처법</string>
    <string name="disaster_search_icon">🔍</string>
    <string name="disaster_no_search">검색결과가 없습니다</string>
    <string name="disaster_no_search_tv">재난과 관련된 키워드를 입력해주세요</string>
    <string name="disaster_example">예시: 지진, 화재, 태풍, 홍수 등</string>
    <string name="disaster_search_loading">AI가 분석 중...</string>
    <string name="disaster_search_loading_done">맞춤형 대처방안을 생성하고 있습니다</string>


    <!--disaster_detail_fragment-->
    <string name="disaster_detail_solution">재난대처방안</string>
    <string name="disaster_detail_title_tv">지진 발생 시 대처방법</string>
    <string name="disaster_detail_category_tv">자연재해</string>
    <string name="disaster_detail_risk_level_tv">높음</string>
    <string name="disaster_detail_subtitle_tv">갑작스런 지진 상황에서의 생존 가이드</string>
    <string name="disaster_detail_ai_content_tv">AI 생성 콘텐츠</string>
    <string name="disaster_detail_ai_detail_tv">이 내용은 AI가 분석하여 생성한 맞춤형 대처방안입니다.실제 상황에서는 전문가의 조언을 우선시 바랍니다.</string>
    <string name="disaster_detail_solutions_tv">상세 대처방안</string>
    <string name="disaster_detail_1">1</string>
    <string name="disaster_detail_1_tv">즉시 탁자나 책상 아래로 몸을 피하세요</string>
    <string name="disaster_detail_2">2</string>
    <string name="disaster_detail_2_tv">문을 열어 피난로를 확보하세요</string>
    <string name="disaster_detail_3">3</string>
    <string name="disaster_detail_3_tv">가스와 전기를 차단하세요</string>
    <string name="disaster_detail_4">4</string>
    <string name="disaster_detail_4_tv">엘리베이터 사용을 금지하세요</string>
    <string name="disaster_detail_5">5</string>
    <string name="disaster_detail_5_tv">건물 밖으로 대피할 때는 계단을 이용하세요</string>
    <string name="disaster_detail_phone_title">긴급 상황 시 연락처</string>
    <string name="disaster_detail_phone_text">긴급신고</string>
    <string name="disaster_detail_phone_119">119</string>
    <string name="disaster_detail_phone_title_112">경찰신고</string>
    <string name="disaster_detail_phone_112">112</string>
    <string name="disaster_detail_phone_title_110">민원상담</string>
    <string name="disaster_detail_phone_110">110</string>

    <!--like_bottomsheet_fragment-->
    <string name="like_main_tv">좋아요한 대피소</string>
    <string name="like_count_tv">총 0개</string>
    <string name="like_empty_tv">좋아요한 대피소가 없어요!</string>

    <!--login_fragment-->
    <string name="login_title_tv">로그인</string>
    <string name="login_email_til">이메일</string>
    <string name="login_password_til">비밀번호</string>
    <string name="login_register_tv">계정이 없으신가요? 회원가입</string>

    <!--profile_edit_fragment-->
    <string name="profile_title_tv">내 프로필</string>
    <string name="profile_change_profile_btn">프로필 변경</string>
    <string name="profile_nickname_tv">닉네임</string>
    <string name="profile_nickname_et">닉네임</string>
    <string name="profile_save_btn">저장하기</string>
    <string name="profile_logout_tv">로그아웃</string>
    <string name="profile_signout_tv">회원탈퇴</string>

    <!--register_fragment-->
    <string name="register_title_tv">회원가입</string>
    <string name="register_email_til">이메일</string>
    <string name="register_nickname_til">닉네임</string>
    <string name="register_password_til">비밀번호</string>
    <string name="register_password_confirm_til">비밀번호 확인</string>
    <string name="register_terms_tv">이용약관 동의 [필수]</string>
    <string name="register_terms2_tv">위치서비스 이용약관 동의 [필수]</string>
    <string name="register_btn">회원가입</string>
    <string name="register_login_tv">이미 계정이 있으신가요? 로그인</string>

    <!--setting_fragment-->
    <string name="setting_tv">설정</string>
    <string name="setting_dark_mode">다크모드</string>
    <string name="setting_app_version_tv">앱 버전</string>
    <string name="setting_app_version">4.41</string>

    <!--item_comment-->
    <string name="comment_nickname_tv">닉네임</string>
    <string name="comment_time_tv">1시간 전</string>
    <string name="comment_content_tv">댓글내용</string>
    <string name="comment_reply_tv">답글</string>

    <!--item_disaster-->
    <string name="item_disaster_title_tv">지진 발생 시 대처방법</string>
    <string name="item_disaster_ai">AI</string>
    <string name="item_disaster_subtitle_tv">갑작스런 지진 상황에서의 생존가이드</string>
    <string name="item_disaster_category_tv">긴급재해</string>
    <string name="item_disaster_risk_level_tv">위험도: 높음</string>
    <string name="item_image_delete_btn">이미지 삭제</string>



    <!--item_post-->
    <string name="item_post_category_tv">소통</string>
    <string name="item_post_nickname_tv">닉네임</string>
    <string name="item_post_timestamp_tv">1시간 전</string>
    <string name="item_post_content_tv">게시물 내용</string>
    <string name="item_post_comment_count_tv">댓글 0개</string>

    <!--spinner_dropdown_item-->
    <string name="spinner_dropdown_item_tv">드롭다운 아이템</string>

    <!--spinner_item-->
    <string name="spinner_item_tv">스피너 아이템</string>

</resources>