<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="20dp"
    android:layout_marginHorizontal="20dp">

    <TextView
        android:id="@+id/dialog_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_like_delete"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="10dp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:background="@drawable/corner_dialog1"
            android:text="@string/dialog_cancel"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_delete_btn"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/corner_dialog2"
            android:text="@string/dialog_delete" />

    </LinearLayout>

</androidx.cardview.widget.CardView>