<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_pink"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/comment_user_profile_iv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/jikimi_img"
        app:civ_border_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_nickname_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/comment_nickname_tv"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/comment_options_btn"
        app:layout_constraintStart_toEndOf="@+id/comment_user_profile_iv"
        app:layout_constraintTop_toTopOf="@+id/comment_user_profile_iv" />

    <TextView
        android:id="@+id/comment_time_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/comment_time_tv"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/comment_nickname_tv"
        app:layout_constraintStart_toStartOf="@+id/comment_nickname_tv"
        app:layout_constraintTop_toBottomOf="@+id/comment_nickname_tv" />

    <ImageButton
        android:id="@+id/comment_options_btn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_more_vert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/comment_content_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/comment_content_tv"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/comment_user_profile_iv"
        app:layout_constraintTop_toBottomOf="@+id/comment_time_tv" />

    <TextView
        android:id="@+id/reply_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/comment_reply_tv"
        android:textColor="@color/main_red"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/comment_content_tv"
        app:layout_constraintTop_toBottomOf="@+id/comment_content_tv" />

    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/line_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reply_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>