<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.fragment.ProfileEditFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/fragment_margin_20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/fragment_margin_20" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_top_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title_tv"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_circle_iv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/jikimi_img"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/detail_top_constraint" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_border"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/profile_change_profile_btn"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_circle_iv"
        app:layout_constraintStart_toStartOf="@+id/profile_circle_iv"
        app:layout_constraintTop_toBottomOf="@+id/profile_circle_iv" />

    <TextView
        android:id="@+id/nickname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/profile_nickname_tv"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/change_profile_btn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nickname_til"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/nickname_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickname_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_nickname_et"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_btn"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/grey_stroke_corner"
        android:backgroundTint="@color/red"
        android:padding="12dp"
        android:text="@string/profile_save_btn"
        android:textColor="@color/white_only"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bottom_linear"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start" />

    <LinearLayout
        android:id="@+id/bottom_linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/menu_left_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile_logout_tv"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/menu_right_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/profile_signout_tv"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>